RESOLVED FIXED99453
[SVG] Zoom is applied incorrectly to symbol elements
https://bugs.webkit.org/show_bug.cgi?id=99453
Summary [SVG] Zoom is applied incorrectly to symbol elements
Branimir Lambov
Reported 2012-10-16 04:35:00 PDT
The attached SVG file contains a symbol which uses percentages of the instance size to draw circles. The image is drawn as expected (only green circles) with zoom=1, but after zoom the percentages are no longer calculated correctly (red circles show where the green ones should have been). Safari and Chrome both fail, Firefox and Opera render the image correctly at all zoom levels.
Attachments
Testcase (828 bytes, image/svg+xml)
2012-10-16 04:36 PDT, Branimir Lambov
no flags
Fix non-root SVG viewport under zoom (4.06 KB, patch)
2013-02-15 23:32 PST, Philip Rogers
no flags
Branimir Lambov
Comment 1 2012-10-16 04:36:19 PDT
Created attachment 168921 [details] Testcase
Philip Rogers
Comment 2 2013-02-15 23:32:45 PST
Created attachment 188695 [details] Fix non-root SVG viewport under zoom
Dirk Schulze
Comment 3 2013-02-15 23:59:29 PST
Comment on attachment 188695 [details] Fix non-root SVG viewport under zoom LGTM. r=me.
WebKit Review Bot
Comment 4 2013-02-17 21:40:22 PST
Comment on attachment 188695 [details] Fix non-root SVG viewport under zoom Clearing flags on attachment: 188695 Committed r143144: <http://trac.webkit.org/changeset/143144>
WebKit Review Bot
Comment 5 2013-02-17 21:40:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.