Fix non-root SVG viewport under zoom https://bugs.webkit.org/show_bug.cgi?id=99453

Reviewed by Dirk Schulze.

Source/WebCore:

The root SVG element handles zoom differently than other SVG nodes because it needs
to translate between CSS (where zoom is applied to all units) and SVG (where zoom is only
applied at the top level). A good description of this difference can be found here:
http://trac.webkit.org/browser/trunk/Source/WebCore/css/StyleResolver.cpp?rev=142855#L2598

SVG elements can appear as children in the SVG tree as well, and in this mode
SVGSVGElement should not consider the current zoom level. This patch fixes a bug
where non-root viewport calculations were removing zoom.

Test: svg/custom/symbol-zoom.html

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::currentViewportSize):
    This change removes the unnecessary zoom calculation for non-root nodes. This is similar
    to how zoom is handled elsewhere, e.g., SVGSVGElement::localCoordinateSpaceTransform.

LayoutTests:

* svg/custom/symbol-zoom-expected.html: Added.
* svg/custom/symbol-zoom.html: Added.


Canonical link: https://commits.webkit.org/128345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143144 268f45cc-cd09-0410-ab3c-d52691b4dbfc